<resources>
    // unique //
    <string name="poweredByYandexTranslate">Powered by Yandex.Translate</string>
    <string name="yandexLink">http://translate.yandex.com"</string>

    // activity_welcome.xml //
    <string name="EnglearnTV">Englearn</string>

    // activity_main.xml //
    <string name="titleTV">Englearn</string>
    <string name="addBtn">Add new words</string>
    <string name="learnBtn">Learn!</string>
    <string name="aboutBtn">About</string>
    <string name="quitBtn">Quit</string>

    // activity_about.xml //
    <string name="aboutTV">Englearn is an application whose main purpose is increasing level of your English vocabulary!</string>
    <string name="darkThemeBtn">Dark Theme</string>
    <string name="lightThemeBtn">Light Theme</string>

    // activity_add.xml //
    <string name="addAWordTV">Add a new word!</string>
    <string name="addANewWordET">Enter your word</string>
    <string name="addingBtn">Add word to database</string>
    <string name="cancelBtn">Cancel</string>

    // activity_words_list.xml
    <string name="noWordsTV">There are not any words in the database!</string>

    // activity_learn.xml //
    <string name="learnTV">Learn!</string>
    <string name="chooseYourTeachingMethodTV">Choose your teaching method!</string>
    <string name="englishPolishBtn">English --> Polish</string>
    <string name="polishEnglishBtn">Polish --> English</string>
    <string name="wordsListBtn">Words List</string>

    activity_english_polish.xml // activity_polish_english.xml
    <string name="startBtn">Start!</string>
    <string name="englishToPolish">English to Polish method</string>
    <string name="polishToEnglish">Polish to English method</string>
    <string name="enterWordET">Enter</string>
    <string name="checkBtn">Check</string>
    <string name="nextBtn">Next</string>

</resources>
